--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,29 +5,14 @@ on:
     - cron: "0 0 * * 0" # Every Sunday at midnight
 
 jobs:
+  style:
+    uses: PlaceOS/.github/.github/workflows/crystal-style.yml@main
+
   test:
     uses: PlaceOS/.github/.github/workflows/containerised-test.yml@main
     with:
       cache_shards: false
 
-  style:
-    uses: PlaceOS/.github/.github/workflows/crystal-style.yml@main
-
   publish:
-    if: contains(github.ref, 'refs/tags')
     needs: test
-    runs-on: ubuntu-latest
-    container: crystallang/crystal
-    steps:
-      - uses: actions/checkout@v2
-      - run: shards install --ignore-crystal-version
-      - name: Run `crystal docs`
-        run: crystal docs
-      - name: Publish to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2
-        with:
-          target_branch: docs
-          build_dir: docs
-          commit_message: "docs: update for ${{ github.ref }}"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    uses: PlaceOS/.github/.github/workflows/publish-crystal-docs.yml@feat/crystal-docs
