--- a/shard.yml
+++ b/shard.yml
@@ -6,7 +6,7 @@ dependencies:
   # Data validation library
   active-model:
     github: spider-gazelle/active-model
-    version: ~> 3.1
+    branch: json-yaml-rebase
 
   # Data validation library
   CrystalEmail:
@@ -43,7 +43,7 @@ dependencies:
   # ORM for RethinkDB built on active-model
   rethinkdb-orm:
     github: spider-gazelle/rethinkdb-orm
-    version: ~> 5.0
+    branch: chore/update-active-model
 
 development_dependencies:
   ameba:
