--- a/shard.yml
+++ b/shard.yml
@@ -6,7 +6,6 @@ dependencies:
   # Data validation library
   active-model:
     github: spider-gazelle/active-model
-    branch: json-yaml-rebase
 
   # Data validation library
   CrystalEmail:
@@ -43,7 +42,7 @@ dependencies:
   # ORM for RethinkDB built on active-model
   rethinkdb-orm:
     github: spider-gazelle/rethinkdb-orm
-    branch: chore/update-active-model
+    version: ~> 6.0
 
 development_dependencies:
   ameba:
