--- a/.github/workflows/autolabel.yml
+++ b/.github/workflows/autolabel.yml
@@ -1,11 +1,7 @@
-on:
-  pull_request_target:
-    types:
-      - opened
-      - edited
-      - reopened
-
 name: Auto Label
+on:
+  pull_request:
+    types: [opened, edited, reopened]
 
 jobs:
   label:
