ci(autolabel): reference `main`

--- a/.github/workflows/autolabel.yml
+++ b/.github/workflows/autolabel.yml
@@ -5,4 +5,4 @@ on:
 
 jobs:
   label:
-    uses: PlaceOS/.github/.github/workflows/autolabel-pr.yml@feat/auto-label
+    uses: PlaceOS/.github/.github/workflows/autolabel-pr.yml@main
