--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -1,5 +1,10 @@
 name: Validate PR
-on: pull_request
+on:
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - edited
 
 jobs:
   title:
