--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: placeos-models
-version: 8.11.1
+version: 8.11.2
 crystal: ~> 1.4
 
 dependencies:
@@ -45,7 +45,7 @@ dependencies:
   # PlaceOS log backend
   placeos-log-backend:
     github: place-labs/log-backend
-    version: ~> 0.11
+    version: ">= 0.11.0"
 
   # ORM for RethinkDB built on active-model
   rethinkdb-orm:
