--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ x-rethinkdb-client-env: &rethinkdb-client-env
 
 services:
   test:
-    image: placeos/service-spec-runner:${CRYSTAL_VERSION:-1.5.0}
+    image: placeos/service-spec-runner:latest
     volumes:
       - ${PWD}/spec:/app/spec
       - ${PWD}/src:/app/src
