--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - ${PWD}/src:/app/src
       - ${PWD}/lib:/app/lib
       - ${PWD}/shard.override.yml:/app/shard.override.yml
-      - ${PWD}/shard.yml:/app/shard.yml
+      - ${PWD}/shard.yml:/app/shard.yml.input
       - ${PWD}/coverage:/app/coverage
     depends_on:
       - rethink
