--- a/shard.yml
+++ b/shard.yml
@@ -47,10 +47,9 @@ dependencies:
     github: place-labs/log-backend
     version: ">= 0.11.0"
 
-  # ORM for RethinkDB built on active-model
-  rethinkdb-orm:
-    github: spider-gazelle/rethinkdb-orm
-    version: ~> 6.0
+  # ORM for Postgres built on active-model
+  pg-orm:
+    github: spider-gazelle/pg-orm
 
 development_dependencies:
   ameba:
