--- a/shard.yml
+++ b/shard.yml
@@ -1,5 +1,5 @@
 name: placeos-models
-version: 9.0.3
+version: 9.0.4
 crystal: ~> 1.4
 
 dependencies:
@@ -50,6 +50,14 @@ dependencies:
   # ORM for Postgres built on active-model
   pg-orm:
     github: spider-gazelle/pg-orm
+
+  # PlaceOS calendar for Tenant model
+  place_calendar:
+    github: PlaceOS/calendar
+
+  ulid:
+    github: place-labs/ulid
+    branch: master
 
 development_dependencies:
   ameba:
