add more specs and helper functions

--- a/shard.yml
+++ b/shard.yml
@@ -59,6 +59,10 @@ dependencies:
     github: place-labs/ulid
     branch: master
 
+  # cron parser
+  cron_parser:
+    github: kostya/cron_parser
+
 development_dependencies:
   ameba:
     github: crystal-ameba/ameba
